# ParkingSpotDetection

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: docker-compose.yml
app/service_gradio/: Dockerfile  app.py  requirements.txt
app/service_model/: Dockerfile  model_server.py  parking_spot_detection.py
data/: parking-dataset-test.yaml  parking-dataset.yaml
models/: models-explanation.md
notebooks/: gradio.ipynb  parking_management.ipynb  training_model_dt.ipynb  training_model_world_yolo.ipynb
service_gradio/: Dockerfile  app.py
service_model/: model_server.py
