[project]
name = "ParkingSpotDetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=3.36.1",
    "jupyter>=1.1.1",
    "lab>=8.3",
    "lapx>=0.5.11",
    "numpy>=2.1.3",
    "pillow>=11.0.0",
    "shapely>=2.0.6",
    "ultralytics>=8.3.23",
]
